Small fixes (#1441)
* feat:Highlight full door entrance for MM

* feat:Marked meat in BIM as obtainable during quest

* feat:Added better highlighting to MM

* feat:Corrected Glough's combat level in MM2

* fix:Small bug fixes to RM

* fix:Spelling in SotF

* feat:Added more rewards to Agility

* feat:Added more rewards to Woodcutting

* feat:Add more placeholders to QuestOrders

Adds Stronghold of Security to ordering

* feat:Remove RFD base QuestHelperQuest

Involves updating QuestOrders as well.